--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,2 +1,26 @@
-<p>{{test}}</p>
-<p>hello {{name}}</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>hello {{name}}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="{{siteUrl('css/bootstrap.min.css')}}" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <h1>Hello, {{name}}!</h1>
+
+    <p>{{test}}</p>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="{{siteUrl('js/bootstrap.min.js')}}"></script>
+  </body>
+</html>
