--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -18,6 +18,8 @@
 
     <p>{{test}}</p>
 
+    {% block content %} {% endblock %}
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
